# stm32h7-gfx

./: .gitignore  README.md
firmware/stm32cube/: .mxproject  Makefile  stm32h7-gfx.ioc
firmware/stm32cube-ext/: .mxproject  Makefile  stm32h7-gfx-ext-loader.ioc
firmware/stm32cube-ext/Core/Inc/: main.h  stm32h7xx_hal_conf.h
firmware/stm32cube-ext/Core/Src/: gpio.c  main.c  octospi.c  tim.c
firmware/stm32cube/Core/Inc/: dma2d.h  fmc.h  ltdc.h  main.h  sdmmc.h  spi.h  stm32h7xx_hal_conf.h  stm32h7xx_it.h  tim.h  usart.h
firmware/stm32cube/Core/Src/: dma.c  dma2d.c  fdcan.c  fmc.c  gpio.c  i2c.c  i2s.c  ltdc.c  main.c  octospi.c  rtc.c  sai.c  sdmmc.c  spi.c  stm32h7xx_it.c  tim.c  usart.c  usb_otg.c
firmware/stm32h7-gfx-ext-loader/: CMakeCache.txt  CMakeLists.txt
firmware/stm32h7-gfx-ext-loader/src/ap/: Dev_Inf.c  Dev_Inf.h  Loader_Src.c  Loader_Src.h
firmware/stm32h7-gfx-ext-loader/src/bsp/: bsp.c
firmware/stm32h7-gfx-ext-loader/src/bsp/device/: stm32h7xx_it.c  system_stm32h7xx.c
firmware/stm32h7-gfx-ext-loader/src/bsp/ldscript/: STM32H723ZGTX_FLASH.ld
firmware/stm32h7-gfx-ext-loader/src/common/hw/include/: ltdc.h
firmware/stm32h7-gfx-ext-loader/src/hw/: hw.c  hw.h  hw_def.h
firmware/stm32h7-gfx-ext-loader/src/hw/driver/: led.c  qspi.c
firmware/stm32h7-gfx-ext-loader/src/lib/STM32H7xx_HAL_Driver/Src/: stm32h7xx_hal.c
firmware/stm32h7-gfx-fw/: CMakeCache.txt  CMakeLists.txt
firmware/stm32h7-gfx-fw/prj/stm32cubeide/: .cproject  .project  smt32h7-gfx Debug.launch  stm32h7-gfx Debug.launch
firmware/stm32h7-gfx-fw/prj/vscode/: stm32h7-gfx.code-workspace
firmware/stm32h7-gfx-fw/src/: main.cpp
firmware/stm32h7-gfx-fw/src/ap/: ap.cpp  ap_def.h
firmware/stm32h7-gfx-fw/src/ap/thread/: thread.cpp  thread.h
firmware/stm32h7-gfx-fw/src/ap/thread/common/: cli.cpp  info.cpp  info.h
firmware/stm32h7-gfx-fw/src/ap/thread/test/: picovoice.cpp
firmware/stm32h7-gfx-fw/src/ap/thread/video/: video.cpp
firmware/stm32h7-gfx-fw/src/ap/thread/video/lib/: AVI_parser.c  AVI_parser.h
firmware/stm32h7-gfx-fw/src/ap/touch-gfx/: stm32h7-gfx.touchgfx  target.config  touchgfx.cpp
firmware/stm32h7-gfx-fw/src/ap/touch-gfx/assets/texts/: texts.xml
firmware/stm32h7-gfx-fw/src/ap/touch-gfx/config/gcc/: app.mk
firmware/stm32h7-gfx-fw/src/ap/touch-gfx/config/msvs/: Application.props
firmware/stm32h7-gfx-fw/src/ap/touch-gfx/gui/include/gui/home_screen/: HomePresenter.hpp  HomeView.hpp
firmware/stm32h7-gfx-fw/src/ap/touch-gfx/gui/include/gui/menu_screen/: MenuPresenter.hpp  MenuView.hpp
firmware/stm32h7-gfx-fw/src/ap/touch-gfx/gui/include/gui/model/: Model.hpp
firmware/stm32h7-gfx-fw/src/ap/touch-gfx/gui/include/gui/rtpcalibration_screen/: RTPCalibrationPresenter.hpp  RTPCalibrationView.hpp
firmware/stm32h7-gfx-fw/src/ap/touch-gfx/gui/src/containers/: CustomContainer1.cpp
firmware/stm32h7-gfx-fw/src/ap/touch-gfx/gui/src/home_screen/: HomePresenter.cpp  HomeView.cpp
firmware/stm32h7-gfx-fw/src/ap/touch-gfx/gui/src/menu_screen/: MenuView.cpp
firmware/stm32h7-gfx-fw/src/ap/touch-gfx/gui/src/model/: Model.cpp
firmware/stm32h7-gfx-fw/src/ap/touch-gfx/gui/src/rtpcalibration_screen/: RTPCalibrationPresenter.cpp  RTPCalibrationView.cpp
firmware/stm32h7-gfx-fw/src/ap/touch-gfx/simulator/msvs/: Application.vcxproj  Application.vcxproj.filters
firmware/stm32h7-gfx-fw/src/bsp/: bsp.c  bsp.h  bsp_math.h
firmware/stm32h7-gfx-fw/src/bsp/device/: stm32h7xx_hal_conf.h  stm32h7xx_it.c
firmware/stm32h7-gfx-fw/src/bsp/ldscript/: STM32H723ZGTX_BOOT.ld  STM32H723ZGTX_FLASH.ld
firmware/stm32h7-gfx-fw/src/bsp/rtos/: FreeRTOSConfig.h  cpu_utils.c  cpu_utils.h  rtos.c  rtos.h
firmware/stm32h7-gfx-fw/src/common/hw/include/: button.h  cli.h  fatfs.h  ltdc.h  pdm.h
firmware/stm32h7-gfx-fw/src/common/hw/include/touch/: ak4183.h  ft5206.h  ft5316.h
firmware/stm32h7-gfx-fw/src/common/hw/src/: cli.c
firmware/stm32h7-gfx-fw/src/hw/: hw.c  hw.h  hw_def.h
firmware/stm32h7-gfx-fw/src/hw/driver/: button.c  eeprom.c  flash.c  fmc.c  fs.c  gpio.c  i2c.c  i2s.c  lcd.c  led.c  ltdc.c  mem.c  pdm.c  pdm.h  pwm.c  qspi.c  reset.c  sd.c  sdram.c  spi.c  spi_flash.c  touch.c  uart.c
firmware/stm32h7-gfx-fw/src/hw/driver/lcd/: st7701.c
firmware/stm32h7-gfx-fw/src/hw/driver/touch/: ak4183.c  ft5206.c  ft5316.c  gt911.c
firmware/stm32h7-gfx-fw/src/hw/driver/usb/: usb.c
firmware/stm32h7-gfx-fw/src/hw/driver/usb/usb_cdc/: usbd_desc.c
firmware/stm32h7-gfx-fw/src/lib/FreeRTOS/Source/CMSIS_RTOS/: cmsis_os.h
firmware/stm32h7-gfx-fw/src/lib/STM32_AcousticSL_Library/Inc/: acoustic_sl.h
firmware/stm32h7-gfx-fw/src/lib/tjpgd/src/: tjpgdcnf.h
